--- a/src/app/common/common-layout.component.html
+++ b/src/app/common/common-layout.component.html
@@ -356,7 +356,7 @@
                                 <a href="" class="dropdown-toggle" data-toggle="dropdown">
                                     <img class="profile-img img-fluid" src="assets/images/user.jpg">
                                     <div class="user-info">
-                                        <span class="name pdd-right-5">Nate Leong</span>
+                                        <span class="name pdd-right-5">{{username}}</span>
                                         <i class="ti-angle-down font-size-10"></i>
                                     </div>
                                 </a>
