--- a/src/app/extras/sign-in/sign-in.html
+++ b/src/app/extras/sign-in/sign-in.html
@@ -34,7 +34,7 @@
 					</div>
 					<div class="login-footer">
 						<img class="img-responsive inline-block" src="assets/images/logo/logo.png" width="100" alt="">
-						<span class="font-size-13 pull-right pdd-top-10">Don't have an account? <a href="">Sign Up Now</a></span>
+						<span class="font-size-13 pull-right pdd-top-10">Don't have an account? <a routerLink='/authentication/sign-up'>Sign Up Now</a></span>
 					</div>
 				</div>
 			</div>
