--- a/src/app/extras/sign-up/sign-up.html
+++ b/src/app/extras/sign-up/sign-up.html
@@ -50,7 +50,7 @@
 												<button type="button" class="btn btn-primary btn-block border-radius-6">Create New Account</button>
 											</div>
 										</form>
-										<p>Already have an account? <a href="">Sign In</a></p>
+										<p>Already have an account? <a routerLink='/authentication/sign-in'>Sign In</a></p>
 										<hr>
 										<small>By signing up you agree to out <a href="">Terms & Policy</a></small>
 									</div>
