--- a/src/app/common/common-layout.component.html
+++ b/src/app/common/common-layout.component.html
@@ -30,6 +30,14 @@
                                 <span class="title">Dashboard</span>
                             </a>
                         </li>
+                        <li clas="nav-item" routerLinkActive="active">
+                                <a href="" [routerLink]="['/wiki/wiki-dashboard']">
+                                    <span class="icon-holder">
+                                        <i class="ti-sharethis-alt"></i>
+                                    </span>
+                                    <span class="title">Wiki</span>
+                                </a>
+                            </li>
                         <li class="nav-item dropdown" >
                             <a class="dropdown-toggle" href="javascript:void(0);" >
                                 <span class="icon-holder">
@@ -211,7 +219,7 @@
                                 </li>              
                             </ul>
                         </li>
-                        <li class="nav-item dropdown">
+                        <!-- <li class="nav-item dropdown">
                             <a class="dropdown-toggle" href="javascript:void(0);">
                                 <span class="icon-holder">
                                     <i class="ti-view-list-alt"></i>
@@ -241,7 +249,7 @@
                                     </ul>
                                 </li>         
                             </ul>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </div>
